[GUI] Fixing z-index problem in link report description button

--- a/actions/linkreport/resources/css/linkreport.scss
+++ b/actions/linkreport/resources/css/linkreport.scss
@@ -47,12 +47,13 @@
 	padding-right: 6em;
 	.row-item-actions{
 		top: 50%;
-		margin-top: 0;
-		-webkit-transform: translateY(-50%);
-		-moz-transform: translateY(-50%);
-		-ms-transform: translateY(-50%);
-		-o-transform: translateY(-50%);
-		transform: translateY(-50%);
+		margin-top: -.8em;
+		-webkit-transform: none;
+		-moz-transform: none;
+		-ms-transform: none;
+		-o-transform: none;
+		transform: none;
+		z-index: auto;
 
 		a{
 			span{
